qt/gen_qtextedit.h

typedef struct QColor QColor;
typedef struct QFont QFont;
typedef struct QMenu QMenu;
typedef struct QMetaObject QMetaObject;
typedef struct QPagedPaintDevice QPagedPaintDevice;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegExp QRegExp;
typedef struct QRegularExpression QRegularExpression;
typedef struct QTextCharFormat QTextCharFormat;
typedef struct QTextCursor QTextCursor;
typedef struct QTextDocument QTextDocument;
typedef struct QTextEdit QTextEdit;
typedef struct QUrl QUrl;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
QTextEdit* QTextEdit_new(QWidget* parent);
QTextEdit* QTextEdit_new2();
QTextEdit* QTextEdit_new3(struct miqt_string text);
QTextEdit* QTextEdit_new4(struct miqt_string text, QWidget* parent);
QMetaObject* QTextEdit_metaObject(const QTextEdit* self);
void* QTextEdit_metacast(QTextEdit* self, const char* param1);
int QTextEdit_metacall(QTextEdit* self, int param1, int param2, void** param3);
struct miqt_string QTextEdit_tr(const char* s);
struct miqt_string QTextEdit_trUtf8(const char* s);
void QTextEdit_setDocument(QTextEdit* self, QTextDocument* document);
QTextDocument* QTextEdit_document(const QTextEdit* self);
void QTextEdit_setPlaceholderText(QTextEdit* self, struct miqt_string placeholderText);
struct miqt_string QTextEdit_placeholderText(const QTextEdit* self);
void QTextEdit_setTextCursor(QTextEdit* self, QTextCursor* cursor);
QTextCursor* QTextEdit_textCursor(const QTextEdit* self);
bool QTextEdit_isReadOnly(const QTextEdit* self);
void QTextEdit_setReadOnly(QTextEdit* self, bool ro);
void QTextEdit_setTextInteractionFlags(QTextEdit* self, int flags);
int QTextEdit_textInteractionFlags(const QTextEdit* self);
double QTextEdit_fontPointSize(const QTextEdit* self);
struct miqt_string QTextEdit_fontFamily(const QTextEdit* self);
int QTextEdit_fontWeight(const QTextEdit* self);
bool QTextEdit_fontUnderline(const QTextEdit* self);
bool QTextEdit_fontItalic(const QTextEdit* self);
QColor* QTextEdit_textColor(const QTextEdit* self);
QColor* QTextEdit_textBackgroundColor(const QTextEdit* self);
QFont* QTextEdit_currentFont(const QTextEdit* self);
int QTextEdit_alignment(const QTextEdit* self);
void QTextEdit_mergeCurrentCharFormat(QTextEdit* self, QTextCharFormat* modifier);
void QTextEdit_setCurrentCharFormat(QTextEdit* self, QTextCharFormat* format);
QTextCharFormat* QTextEdit_currentCharFormat(const QTextEdit* self);
int QTextEdit_autoFormatting(const QTextEdit* self);
void QTextEdit_setAutoFormatting(QTextEdit* self, int features);
bool QTextEdit_tabChangesFocus(const QTextEdit* self);
void QTextEdit_setTabChangesFocus(QTextEdit* self, bool b);
void QTextEdit_setDocumentTitle(QTextEdit* self, struct miqt_string title);
struct miqt_string QTextEdit_documentTitle(const QTextEdit* self);
bool QTextEdit_isUndoRedoEnabled(const QTextEdit* self);
void QTextEdit_setUndoRedoEnabled(QTextEdit* self, bool enable);
int QTextEdit_lineWrapMode(const QTextEdit* self);
void QTextEdit_setLineWrapMode(QTextEdit* self, int mode);
int QTextEdit_lineWrapColumnOrWidth(const QTextEdit* self);
void QTextEdit_setLineWrapColumnOrWidth(QTextEdit* self, int w);
int QTextEdit_wordWrapMode(const QTextEdit* self);
void QTextEdit_setWordWrapMode(QTextEdit* self, int policy);
bool QTextEdit_find(QTextEdit* self, struct miqt_string exp);
bool QTextEdit_findWithExp(QTextEdit* self, QRegExp* exp);
bool QTextEdit_find2(QTextEdit* self, QRegularExpression* exp);
struct miqt_string QTextEdit_toPlainText(const QTextEdit* self);
struct miqt_string QTextEdit_toHtml(const QTextEdit* self);
struct miqt_string QTextEdit_toMarkdown(const QTextEdit* self);
void QTextEdit_ensureCursorVisible(QTextEdit* self);
QVariant* QTextEdit_loadResource(QTextEdit* self, int type, QUrl* name);
QMenu* QTextEdit_createStandardContextMenu(QTextEdit* self);
QMenu* QTextEdit_createStandardContextMenuWithPosition(QTextEdit* self, QPoint* position);
QTextCursor* QTextEdit_cursorForPosition(const QTextEdit* self, QPoint* pos);
QRect* QTextEdit_cursorRect(const QTextEdit* self, QTextCursor* cursor);
QRect* QTextEdit_cursorRect2(const QTextEdit* self);
struct miqt_string QTextEdit_anchorAt(const QTextEdit* self, QPoint* pos);
bool QTextEdit_overwriteMode(const QTextEdit* self);
void QTextEdit_setOverwriteMode(QTextEdit* self, bool overwrite);
int QTextEdit_tabStopWidth(const QTextEdit* self);
void QTextEdit_setTabStopWidth(QTextEdit* self, int width);
double QTextEdit_tabStopDistance(const QTextEdit* self);
void QTextEdit_setTabStopDistance(QTextEdit* self, double distance);
int QTextEdit_cursorWidth(const QTextEdit* self);
void QTextEdit_setCursorWidth(QTextEdit* self, int width);
bool QTextEdit_acceptRichText(const QTextEdit* self);
void QTextEdit_setAcceptRichText(QTextEdit* self, bool accept);
void QTextEdit_setExtraSelections(QTextEdit* self, struct miqt_array /* of QTextEdit__ExtraSelection* */  selections);
struct miqt_array /* of QTextEdit__ExtraSelection* */  QTextEdit_extraSelections(const QTextEdit* self);
void QTextEdit_moveCursor(QTextEdit* self, int operation);
bool QTextEdit_canPaste(const QTextEdit* self);
void QTextEdit_print(const QTextEdit* self, QPagedPaintDevice* printer);
QVariant* QTextEdit_inputMethodQuery(const QTextEdit* self, int property);
QVariant* QTextEdit_inputMethodQuery2(const QTextEdit* self, int query, QVariant* argument);
void QTextEdit_setFontPointSize(QTextEdit* self, double s);
void QTextEdit_setFontFamily(QTextEdit* self, struct miqt_string fontFamily);
void QTextEdit_setFontWeight(QTextEdit* self, int w);
void QTextEdit_setFontUnderline(QTextEdit* self, bool b);
void QTextEdit_setFontItalic(QTextEdit* self, bool b);
void QTextEdit_setTextColor(QTextEdit* self, QColor* c);
void QTextEdit_setTextBackgroundColor(QTextEdit* self, QColor* c);
void QTextEdit_setCurrentFont(QTextEdit* self, QFont* f);
void QTextEdit_setAlignment(QTextEdit* self, int a);
void QTextEdit_setPlainText(QTextEdit* self, struct miqt_string text);
void QTextEdit_setHtml(QTextEdit* self, struct miqt_string text);
void QTextEdit_setMarkdown(QTextEdit* self, struct miqt_string markdown);
void QTextEdit_setText(QTextEdit* self, struct miqt_string text);
void QTextEdit_cut(QTextEdit* self);
void QTextEdit_copy(QTextEdit* self);
void QTextEdit_paste(QTextEdit* self);
void QTextEdit_undo(QTextEdit* self);
void QTextEdit_redo(QTextEdit* self);
void QTextEdit_clear(QTextEdit* self);
void QTextEdit_selectAll(QTextEdit* self);
void QTextEdit_insertPlainText(QTextEdit* self, struct miqt_string text);
void QTextEdit_insertHtml(QTextEdit* self, struct miqt_string text);
void QTextEdit_append(QTextEdit* self, struct miqt_string text);
void QTextEdit_scrollToAnchor(QTextEdit* self, struct miqt_string name);
void QTextEdit_zoomIn(QTextEdit* self);
void QTextEdit_zoomOut(QTextEdit* self);
void QTextEdit_textChanged(QTextEdit* self);
void QTextEdit_connect_textChanged(QTextEdit* self, intptr_t slot);
void QTextEdit_undoAvailable(QTextEdit* self, bool b);
void QTextEdit_connect_undoAvailable(QTextEdit* self, intptr_t slot);
void QTextEdit_redoAvailable(QTextEdit* self, bool b);
void QTextEdit_connect_redoAvailable(QTextEdit* self, intptr_t slot);
void QTextEdit_currentCharFormatChanged(QTextEdit* self, QTextCharFormat* format);
void QTextEdit_connect_currentCharFormatChanged(QTextEdit* self, intptr_t slot);
void QTextEdit_copyAvailable(QTextEdit* self, bool b);
void QTextEdit_connect_copyAvailable(QTextEdit* self, intptr_t slot);
void QTextEdit_selectionChanged(QTextEdit* self);
void QTextEdit_connect_selectionChanged(QTextEdit* self, intptr_t slot);
void QTextEdit_cursorPositionChanged(QTextEdit* self);
void QTextEdit_connect_cursorPositionChanged(QTextEdit* self, intptr_t slot);