qt/gen_qtextedit.nim


proc fcQTextEdit_new(parent: pointer): ptr cQTextEdit {.importc: "QTextEdit_new".}
proc fcQTextEdit_new2(): ptr cQTextEdit {.importc: "QTextEdit_new2".}
proc fcQTextEdit_new3(text: struct_miqt_string): ptr cQTextEdit {.importc: "QTextEdit_new3".}
proc fcQTextEdit_new4(text: struct_miqt_string, parent: pointer): ptr cQTextEdit {.importc: "QTextEdit_new4".}
proc fcQTextEdit_metaObject(self: pointer, ): pointer {.importc: "QTextEdit_metaObject".}
proc fcQTextEdit_metacast(self: pointer, param1: cstring): pointer {.importc: "QTextEdit_metacast".}
proc fcQTextEdit_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QTextEdit_metacall".}
proc fcQTextEdit_tr(s: cstring): struct_miqt_string {.importc: "QTextEdit_tr".}
proc fcQTextEdit_trUtf8(s: cstring): struct_miqt_string {.importc: "QTextEdit_trUtf8".}
proc fcQTextEdit_setDocument(self: pointer, document: pointer): void {.importc: "QTextEdit_setDocument".}
proc fcQTextEdit_document(self: pointer, ): pointer {.importc: "QTextEdit_document".}
proc fcQTextEdit_setPlaceholderText(self: pointer, placeholderText: struct_miqt_string): void {.importc: "QTextEdit_setPlaceholderText".}
proc fcQTextEdit_placeholderText(self: pointer, ): struct_miqt_string {.importc: "QTextEdit_placeholderText".}
proc fcQTextEdit_setTextCursor(self: pointer, cursor: pointer): void {.importc: "QTextEdit_setTextCursor".}
proc fcQTextEdit_textCursor(self: pointer, ): pointer {.importc: "QTextEdit_textCursor".}
proc fcQTextEdit_isReadOnly(self: pointer, ): bool {.importc: "QTextEdit_isReadOnly".}
proc fcQTextEdit_setReadOnly(self: pointer, ro: bool): void {.importc: "QTextEdit_setReadOnly".}
proc fcQTextEdit_setTextInteractionFlags(self: pointer, flags: cint): void {.importc: "QTextEdit_setTextInteractionFlags".}
proc fcQTextEdit_textInteractionFlags(self: pointer, ): cint {.importc: "QTextEdit_textInteractionFlags".}
proc fcQTextEdit_fontPointSize(self: pointer, ): float64 {.importc: "QTextEdit_fontPointSize".}
proc fcQTextEdit_fontFamily(self: pointer, ): struct_miqt_string {.importc: "QTextEdit_fontFamily".}
proc fcQTextEdit_fontWeight(self: pointer, ): cint {.importc: "QTextEdit_fontWeight".}
proc fcQTextEdit_fontUnderline(self: pointer, ): bool {.importc: "QTextEdit_fontUnderline".}
proc fcQTextEdit_fontItalic(self: pointer, ): bool {.importc: "QTextEdit_fontItalic".}
proc fcQTextEdit_textColor(self: pointer, ): pointer {.importc: "QTextEdit_textColor".}
proc fcQTextEdit_textBackgroundColor(self: pointer, ): pointer {.importc: "QTextEdit_textBackgroundColor".}
proc fcQTextEdit_currentFont(self: pointer, ): pointer {.importc: "QTextEdit_currentFont".}
proc fcQTextEdit_alignment(self: pointer, ): cint {.importc: "QTextEdit_alignment".}
proc fcQTextEdit_mergeCurrentCharFormat(self: pointer, modifier: pointer): void {.importc: "QTextEdit_mergeCurrentCharFormat".}
proc fcQTextEdit_setCurrentCharFormat(self: pointer, format: pointer): void {.importc: "QTextEdit_setCurrentCharFormat".}
proc fcQTextEdit_currentCharFormat(self: pointer, ): pointer {.importc: "QTextEdit_currentCharFormat".}
proc fcQTextEdit_autoFormatting(self: pointer, ): cint {.importc: "QTextEdit_autoFormatting".}
proc fcQTextEdit_setAutoFormatting(self: pointer, features: cint): void {.importc: "QTextEdit_setAutoFormatting".}
proc fcQTextEdit_tabChangesFocus(self: pointer, ): bool {.importc: "QTextEdit_tabChangesFocus".}
proc fcQTextEdit_setTabChangesFocus(self: pointer, b: bool): void {.importc: "QTextEdit_setTabChangesFocus".}
proc fcQTextEdit_setDocumentTitle(self: pointer, title: struct_miqt_string): void {.importc: "QTextEdit_setDocumentTitle".}
proc fcQTextEdit_documentTitle(self: pointer, ): struct_miqt_string {.importc: "QTextEdit_documentTitle".}
proc fcQTextEdit_isUndoRedoEnabled(self: pointer, ): bool {.importc: "QTextEdit_isUndoRedoEnabled".}
proc fcQTextEdit_setUndoRedoEnabled(self: pointer, enable: bool): void {.importc: "QTextEdit_setUndoRedoEnabled".}
proc fcQTextEdit_lineWrapMode(self: pointer, ): cint {.importc: "QTextEdit_lineWrapMode".}
proc fcQTextEdit_setLineWrapMode(self: pointer, mode: cint): void {.importc: "QTextEdit_setLineWrapMode".}
proc fcQTextEdit_lineWrapColumnOrWidth(self: pointer, ): cint {.importc: "QTextEdit_lineWrapColumnOrWidth".}
proc fcQTextEdit_setLineWrapColumnOrWidth(self: pointer, w: cint): void {.importc: "QTextEdit_setLineWrapColumnOrWidth".}
proc fcQTextEdit_wordWrapMode(self: pointer, ): cint {.importc: "QTextEdit_wordWrapMode".}
proc fcQTextEdit_setWordWrapMode(self: pointer, policy: cint): void {.importc: "QTextEdit_setWordWrapMode".}
proc fcQTextEdit_find(self: pointer, exp: struct_miqt_string): bool {.importc: "QTextEdit_find".}
proc fcQTextEdit_findWithExp(self: pointer, exp: pointer): bool {.importc: "QTextEdit_findWithExp".}
proc fcQTextEdit_find2(self: pointer, exp: pointer): bool {.importc: "QTextEdit_find2".}
proc fcQTextEdit_toPlainText(self: pointer, ): struct_miqt_string {.importc: "QTextEdit_toPlainText".}
proc fcQTextEdit_toHtml(self: pointer, ): struct_miqt_string {.importc: "QTextEdit_toHtml".}
proc fcQTextEdit_toMarkdown(self: pointer, ): struct_miqt_string {.importc: "QTextEdit_toMarkdown".}
proc fcQTextEdit_ensureCursorVisible(self: pointer, ): void {.importc: "QTextEdit_ensureCursorVisible".}
proc fcQTextEdit_loadResource(self: pointer, typeVal: cint, name: pointer): pointer {.importc: "QTextEdit_loadResource".}
proc fcQTextEdit_createStandardContextMenu(self: pointer, ): pointer {.importc: "QTextEdit_createStandardContextMenu".}
proc fcQTextEdit_createStandardContextMenuWithPosition(self: pointer, position: pointer): pointer {.importc: "QTextEdit_createStandardContextMenuWithPosition".}
proc fcQTextEdit_cursorForPosition(self: pointer, pos: pointer): pointer {.importc: "QTextEdit_cursorForPosition".}
proc fcQTextEdit_cursorRect(self: pointer, cursor: pointer): pointer {.importc: "QTextEdit_cursorRect".}
proc fcQTextEdit_cursorRect2(self: pointer, ): pointer {.importc: "QTextEdit_cursorRect2".}
proc fcQTextEdit_anchorAt(self: pointer, pos: pointer): struct_miqt_string {.importc: "QTextEdit_anchorAt".}
proc fcQTextEdit_overwriteMode(self: pointer, ): bool {.importc: "QTextEdit_overwriteMode".}
proc fcQTextEdit_setOverwriteMode(self: pointer, overwrite: bool): void {.importc: "QTextEdit_setOverwriteMode".}
proc fcQTextEdit_tabStopWidth(self: pointer, ): cint {.importc: "QTextEdit_tabStopWidth".}
proc fcQTextEdit_setTabStopWidth(self: pointer, width: cint): void {.importc: "QTextEdit_setTabStopWidth".}
proc fcQTextEdit_tabStopDistance(self: pointer, ): float64 {.importc: "QTextEdit_tabStopDistance".}
proc fcQTextEdit_setTabStopDistance(self: pointer, distance: float64): void {.importc: "QTextEdit_setTabStopDistance".}
proc fcQTextEdit_cursorWidth(self: pointer, ): cint {.importc: "QTextEdit_cursorWidth".}
proc fcQTextEdit_setCursorWidth(self: pointer, width: cint): void {.importc: "QTextEdit_setCursorWidth".}
proc fcQTextEdit_acceptRichText(self: pointer, ): bool {.importc: "QTextEdit_acceptRichText".}
proc fcQTextEdit_setAcceptRichText(self: pointer, accept: bool): void {.importc: "QTextEdit_setAcceptRichText".}
proc fcQTextEdit_setExtraSelections(self: pointer, selections: struct_miqt_array): void {.importc: "QTextEdit_setExtraSelections".}
proc fcQTextEdit_extraSelections(self: pointer, ): struct_miqt_array {.importc: "QTextEdit_extraSelections".}
proc fcQTextEdit_moveCursor(self: pointer, operation: cint): void {.importc: "QTextEdit_moveCursor".}
proc fcQTextEdit_canPaste(self: pointer, ): bool {.importc: "QTextEdit_canPaste".}
proc fcQTextEdit_print(self: pointer, printer: pointer): void {.importc: "QTextEdit_print".}
proc fcQTextEdit_inputMethodQuery(self: pointer, property: cint): pointer {.importc: "QTextEdit_inputMethodQuery".}
proc fcQTextEdit_inputMethodQuery2(self: pointer, query: cint, argument: pointer): pointer {.importc: "QTextEdit_inputMethodQuery2".}
proc fcQTextEdit_setFontPointSize(self: pointer, s: float64): void {.importc: "QTextEdit_setFontPointSize".}
proc fcQTextEdit_setFontFamily(self: pointer, fontFamily: struct_miqt_string): void {.importc: "QTextEdit_setFontFamily".}
proc fcQTextEdit_setFontWeight(self: pointer, w: cint): void {.importc: "QTextEdit_setFontWeight".}
proc fcQTextEdit_setFontUnderline(self: pointer, b: bool): void {.importc: "QTextEdit_setFontUnderline".}
proc fcQTextEdit_setFontItalic(self: pointer, b: bool): void {.importc: "QTextEdit_setFontItalic".}
proc fcQTextEdit_setTextColor(self: pointer, c: pointer): void {.importc: "QTextEdit_setTextColor".}
proc fcQTextEdit_setTextBackgroundColor(self: pointer, c: pointer): void {.importc: "QTextEdit_setTextBackgroundColor".}
proc fcQTextEdit_setCurrentFont(self: pointer, f: pointer): void {.importc: "QTextEdit_setCurrentFont".}
proc fcQTextEdit_setAlignment(self: pointer, a: cint): void {.importc: "QTextEdit_setAlignment".}
proc fcQTextEdit_setPlainText(self: pointer, text: struct_miqt_string): void {.importc: "QTextEdit_setPlainText".}
proc fcQTextEdit_setHtml(self: pointer, text: struct_miqt_string): void {.importc: "QTextEdit_setHtml".}
proc fcQTextEdit_setMarkdown(self: pointer, markdown: struct_miqt_string): void {.importc: "QTextEdit_setMarkdown".}
proc fcQTextEdit_setText(self: pointer, text: struct_miqt_string): void {.importc: "QTextEdit_setText".}
proc fcQTextEdit_cut(self: pointer, ): void {.importc: "QTextEdit_cut".}
proc fcQTextEdit_copy(self: pointer, ): void {.importc: "QTextEdit_copy".}
proc fcQTextEdit_paste(self: pointer, ): void {.importc: "QTextEdit_paste".}
proc fcQTextEdit_undo(self: pointer, ): void {.importc: "QTextEdit_undo".}
proc fcQTextEdit_redo(self: pointer, ): void {.importc: "QTextEdit_redo".}
proc fcQTextEdit_clear(self: pointer, ): void {.importc: "QTextEdit_clear".}
proc fcQTextEdit_selectAll(self: pointer, ): void {.importc: "QTextEdit_selectAll".}
proc fcQTextEdit_insertPlainText(self: pointer, text: struct_miqt_string): void {.importc: "QTextEdit_insertPlainText".}
proc fcQTextEdit_insertHtml(self: pointer, text: struct_miqt_string): void {.importc: "QTextEdit_insertHtml".}
proc fcQTextEdit_append(self: pointer, text: struct_miqt_string): void {.importc: "QTextEdit_append".}
proc fcQTextEdit_scrollToAnchor(self: pointer, name: struct_miqt_string): void {.importc: "QTextEdit_scrollToAnchor".}
proc fcQTextEdit_zoomIn(self: pointer, ): void {.importc: "QTextEdit_zoomIn".}
proc fcQTextEdit_zoomOut(self: pointer, ): void {.importc: "QTextEdit_zoomOut".}
proc fcQTextEdit_textChanged(self: pointer, ): void {.importc: "QTextEdit_textChanged".}
proc fQTextEdit_connect_textChanged(self: pointer, slot: int) {.importc: "QTextEdit_connect_textChanged".}
proc fcQTextEdit_undoAvailable(self: pointer, b: bool): void {.importc: "QTextEdit_undoAvailable".}
proc fQTextEdit_connect_undoAvailable(self: pointer, slot: int) {.importc: "QTextEdit_connect_undoAvailable".}
proc fcQTextEdit_redoAvailable(self: pointer, b: bool): void {.importc: "QTextEdit_redoAvailable".}
proc fQTextEdit_connect_redoAvailable(self: pointer, slot: int) {.importc: "QTextEdit_connect_redoAvailable".}
proc fcQTextEdit_currentCharFormatChanged(self: pointer, format: pointer): void {.importc: "QTextEdit_currentCharFormatChanged".}
proc fQTextEdit_connect_currentCharFormatChanged(self: pointer, slot: int) {.importc: "QTextEdit_connect_currentCharFormatChanged".}
proc fcQTextEdit_copyAvailable(self: pointer, b: bool): void {.importc: "QTextEdit_copyAvailable".}
proc fQTextEdit_connect_copyAvailable(self: pointer, slot: int) {.importc: "QTextEdit_connect_copyAvailable".}
proc fcQTextEdit_selectionChanged(self: pointer, ): void {.importc: "QTextEdit_selectionChanged".}
proc fQTextEdit_connect_selectionChanged(self: pointer, slot: int) {.importc: "QTextEdit_connect_selectionChanged".}
proc fcQTextEdit_cursorPositionChanged(self: pointer, ): void {.importc: "QTextEdit_cursorPositionChanged".}
proc fQTextEdit_connect_cursorPositionChanged(self: pointer, slot: int) {.importc: "QTextEdit_connect_cursorPositionChanged".}
